# NTprogress

./: Task.docx
Client/Client/: CMakeLists.txt  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ordersmenu.cpp  ordersmenu.h  ordersmenu.ui
Client/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Client/debug/.cmake/api/v1/reply/: cache-v2-7e01a3b656a2b1844226.json  cmakeFiles-v1-9aef82026a97db8902b3.json  codemodel-v2-72a4814ab768f9535ffe.json  directory-.-Debug-c98aff44252423cbc92e.json  index-2022-11-01T06-48-14-0455.json  (+3 more)
Client/debug/.qt/: QtDeploySupport.cmake
Client/debug/Client_autogen/: deps  mocs_compilation.cpp
Client/release/: CMakeCache.txt  build.ninja  cmake_install.cmake
Client/release/.qt/: QtDeploySupport.cmake
Releases/Server/: HistoryOrdersDB.db
Server/: .gitignore
Server/Server/: CMakeLists.txt  client.cpp  client.h  historyorders.cpp  historyorders.h  historyordersdb.cpp  historyordersdb.h  main.cpp  order.cpp  order.h  server.cpp  server.h  testing_tradingfloor.cpp  testing_tradingfloor.h  tradingfloor.cpp  tradingfloor.h
Server/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  HistoryOrdersDB.db  build.ninja  cmake_install.cmake
Server/debug/.qt/: QtDeploySupport.cmake
Server/debug/Server_autogen/: deps  mocs_compilation.cpp
Server/release/: .ninja_deps  .ninja_log  CMakeCache.txt  HistoryOrdersDB.db  build.ninja  cmake_install.cmake
Server/release/.qt/: QtDeploySupport.cmake
Server/release/Server_autogen/: deps  mocs_compilation.cpp
(+76 files in other folders)
